<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main" >

    <RelativeLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ll_title_height"
        android:background="@drawable/bg_maintitle" >

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/iv_logo_marginleft"
            android:src="@drawable/img_logo" />

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_logo"
            android:layout_alignTop="@id/iv_logo"
            android:layout_marginLeft="@dimen/tv_logo_marginleft"
            android:layout_toRightOf="@id/iv_logo"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/tv_logo_textsize" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_pagename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="90dp"
        android:text="@string/backup"
        android:textColor="@color/white"
        android:textSize="28dp" />

    <RelativeLayout
        android:id="@+id/rl_backup_batch"
        android:layout_width="239dp"
        android:layout_height="402dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="199dp" >

        <ImageView
            android:layout_width="214dp"
            android:layout_height="392dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_batch_btnbg" />

        <ImageView
            android:id="@+id/iv_batch_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:background="@drawable/img_batch" />

        <TextView
            android:id="@+id/tv_num_checked"
            style="@style/TextMarqueeRepeatForever"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="90dp"
            android:gravity="right"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="80sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_ge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_num_checked"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/tv_num_checked"
            android:text="@string/ge"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_batch_suggest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="240dp"
            android:gravity="center_horizontal"
            android:text="@string/dobatchbyclickmenu"
            android:textColor="@color/white"
            android:textSize="22dp" />

        <Button
            android:id="@+id/bt_batch"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/selector_square_focues"
            android:text=""
            android:textColor="@color/white"
            android:textSize="28dp" />
    </RelativeLayout>

    <GridView
        android:id="@+id/gridview"
        android:layout_width="wrap_content"
        android:layout_height="420dp"
        android:layout_marginLeft="-20dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="185dp"
        android:layout_toRightOf="@id/rl_backup_batch"
        android:horizontalSpacing="10dp"
        android:listSelector="@drawable/selector_square_focues"
        android:numColumns="3"
        android:scrollbars="none"
        android:verticalSpacing="15dp" >
    </GridView>

    <ImageView
        android:id="@+id/iv_shandow_batch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/rl_backup_batch"
        android:layout_alignRight="@id/rl_backup_batch"
        android:layout_below="@id/rl_backup_batch"
        android:layout_marginTop="-15dp"
        android:paddingLeft="12.5dp"
        android:paddingRight="12.5dp"
        android:src="@drawable/img_shandow_batch" />

    <ImageView
        android:id="@+id/iv_shandow_item1"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/iv_shandow_batch"
        android:layout_marginLeft="-5dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@id/iv_shandow_batch"
        android:scaleType="fitXY"
        android:src="@drawable/img_shandow_griditem"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/iv_shandow_item2"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/iv_shandow_item1"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/iv_shandow_item1"
        android:scaleType="fitXY"
        android:src="@drawable/img_shandow_griditem"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/iv_shandow_item3"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/iv_shandow_item2"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/iv_shandow_item2"
        android:scaleType="fitXY"
        android:src="@drawable/img_shandow_griditem"
        android:visibility="invisible" />

</RelativeLayout>